# menuwhisper

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  package.json
apps/api/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_enable_pgvector.py  3320ccd52313_merge_migrations.py  56564863460e_add_user_feedback_table.py  571cffb33f0a_create_core_tables.py  5cf3c04026de_add_embeddings_and_user_feedback_tables.py  bc8a31605203_add_normalization_fields.py  c29075254e7c_merge_normalization_fields.py  dcf136e41319_add_users_table.py
apps/api/app/: db.py  embeddings.py  main.py  models.py  normalizer.py  ocr.py  services.py  settings.py
apps/api/app/routers/: feedback.py  ingest.py  menu.py  recommend.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: page.tsx
apps/web/src/app/menu/[id]/: page.tsx  ui.tsx
apps/web/src/app/seed/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/lib/: api.ts
infra/: docker-compose.yaml
